kubernetes Example/crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: crawler
spec:
  selector:
    app: synergychat-crawler  
  ports:
  - port: 80
    targetPort: 8080
