kubernetes Example/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: synchat.internal
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-service
            port: 
              number: 80
  - host: synchatapi.internal
    http: 
      paths: 
        - path: /   
          pathType: Prefix
          backend:
            service: 
              name: api-service
              port:
                number: 80
